--- a/IDCalculator/IDCalculator/Storyboard_iPhone.storyboard
+++ b/IDCalculator/IDCalculator/Storyboard_iPhone.storyboard
@@ -4,10 +4,54 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1930"/>
     </dependencies>
     <scenes>
+        <!--View Controller - Console-->
+        <scene sceneID="e8K-0j-1ld">
+            <objects>
+                <viewController id="jJ4-TP-rtf" userLabel="View Controller - Console" customClass="ConsoleViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="fVJ-GW-JNc">
+                        <rect key="frame" x="0.0" y="20" width="320" height="411"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aH6-gm-Pqp">
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="done"/>
+                                <connections>
+                                    <action selector="editingDone:" destination="jJ4-TP-rtf" eventType="editingDidEndOnExit" id="PzP-lu-3jo"/>
+                                </connections>
+                            </textField>
+                            <textView clipsSubviews="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k54-zl-r9C">
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="381" type="user" id="hQQ-os-vof"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="aH6-gm-Pqp" firstAttribute="leading" secondItem="fVJ-GW-JNc" secondAttribute="leading" type="default" id="6jk-vv-dXB"/>
+                            <constraint firstItem="aH6-gm-Pqp" firstAttribute="trailing" secondItem="fVJ-GW-JNc" secondAttribute="trailing" type="default" id="GlG-d5-mBh"/>
+                            <constraint firstItem="k54-zl-r9C" firstAttribute="leading" secondItem="fVJ-GW-JNc" secondAttribute="leading" type="user" id="iGs-ZW-Odx"/>
+                            <constraint firstItem="aH6-gm-Pqp" firstAttribute="bottom" secondItem="fVJ-GW-JNc" secondAttribute="bottom" type="default" id="kHi-RU-s2i"/>
+                            <constraint firstItem="k54-zl-r9C" firstAttribute="top" secondItem="fVJ-GW-JNc" secondAttribute="top" type="user" id="mQa-hG-yRG"/>
+                            <constraint firstItem="k54-zl-r9C" firstAttribute="trailing" secondItem="fVJ-GW-JNc" secondAttribute="trailing" type="default" id="wG1-nR-5ud"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Console" id="TOK-Ya-y6W"/>
+                    <connections>
+                        <outlet property="display" destination="k54-zl-r9C" id="Ndn-oJ-JD6"/>
+                        <outlet property="inputField" destination="aH6-gm-Pqp" id="dyE-ju-aXU"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cTG-58-G1R" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="880" y="-1"/>
+        </scene>
         <!--View Controller - Graph-->
         <scene sceneID="UfF-5I-KGJ">
             <objects>
-                <viewController id="zep-EB-yl2" userLabel="View Controller - Graph" sceneMemberID="viewController">
+                <viewController id="zep-EB-yl2" userLabel="View Controller - Graph" customClass="GraphViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="rDb-4Q-mhf">
                         <rect key="frame" x="0.0" y="20" width="320" height="411"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -17,7 +61,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dln-YO-rx2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="880" y="162"/>
+            <point key="canvasLocation" x="880" y="650"/>
         </scene>
         <!--View Controller - Calculator-->
         <scene sceneID="61K-s2-kpi">
@@ -527,11 +571,12 @@
                     <connections>
                         <segue destination="jCI-G3-0cw" kind="relationship" relationship="viewControllers" id="Tie-By-vgb"/>
                         <segue destination="zep-EB-yl2" kind="relationship" relationship="viewControllers" id="9M9-9P-Dax"/>
+                        <segue destination="jJ4-TP-rtf" kind="relationship" relationship="viewControllers" id="yIo-Vp-JcK"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Yig-er-Bbe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="318" y="-174"/>
+            <point key="canvasLocation" x="-38" y="-1"/>
         </scene>
     </scenes>
     <classes>
@@ -559,6 +604,18 @@
                 <relationship kind="outlet" name="sinButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="textView" candidateClass="UITextView"/>
             </relationships>
+        </class>
+        <class className="ConsoleViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ConsoleViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="editingDone:"/>
+                <relationship kind="action" name="touchesBegan:withEvent:" candidateClass="NSSet"/>
+                <relationship kind="outlet" name="display" candidateClass="UITextView"/>
+                <relationship kind="outlet" name="inputField" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="GraphViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GraphViewController.h"/>
         </class>
         <class className="NSLayoutConstraint" superclassName="NSObject">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
