--- a/IDCalculator/IDCalculator/en.lproj/Storyboard_iPad.storyboard
+++ b/IDCalculator/IDCalculator/en.lproj/Storyboard_iPad.storyboard
@@ -399,10 +399,19 @@
                         <rect key="frame" x="0.0" y="20" width="768" height="955"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <gestureRecognizers/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="WcB-co-zg0" appends="YES" id="w81-hy-7nT"/>
+                        </connections>
                     </view>
                     <tabBarItem key="tabBarItem" title="Graph" image="chart_line_24.png" id="Fhb-r1-v9l"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="b7D-i5-kn0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="WcB-co-zg0">
+                    <connections>
+                        <action selector="dragReceived:" destination="sDl-u3-8Cf" id="Pwy-GI-ZvG"/>
+                    </connections>
+                </panGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="505" y="599"/>
         </scene>
@@ -434,6 +443,9 @@
     <classes>
         <class className="Canvas2DView" superclassName="UIView">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/Canvas2DView.h"/>
+            <relationships>
+                <relationship kind="action" name="dragReceived:"/>
+            </relationships>
         </class>
         <class className="PadConsoleViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/PadConsoleViewController.h"/>
